# adaptive-inference-router-with-cascade-serving

./: .gitignore  FINAL_VALIDATION.md  QUALITY_ASSESSMENT.md  README.md  pyproject.toml  requirements.txt  setup.py  test_installation.py  test_runner.py
configs/: default.yaml
results/: results.json
scripts/: evaluate.py  train.py
src/adaptive_inference_router_with_cascade_serving/: __init__.py
src/adaptive_inference_router_with_cascade_serving/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_inference_router_with_cascade_serving/evaluation/: __init__.py  metrics.py
src/adaptive_inference_router_with_cascade_serving/training/: __init__.py  trainer.py
src/adaptive_inference_router_with_cascade_serving/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
